--- a/package.json
+++ b/package.json
@@ -4,18 +4,20 @@
   "description": "",
   "main": "index.js",
   "scripts": {
-    "start": "node index.js --dev",
     "build": "node index.js",
+    "start": "npm run build && node bs.js",
     "deploy": "npm run build && surge -p build -d benclinkinbeard.surge.sh"
   },
   "keywords": [],
   "author": "Ben Clinkinbeard <ben.clinkinbeard@gmail.com> (http://benclinkinbeard.com/)",
   "license": "ISC",
   "dependencies": {
+    "browser-sync": "^2.9.11",
     "handlebars": "^4.0.3",
     "metalsmith": "^2.1.0",
     "metalsmith-browser-sync": "^1.1.0",
     "metalsmith-collections": "^0.7.0",
+    "metalsmith-if": "^0.1.1",
     "metalsmith-in-place": "^1.3.1",
     "metalsmith-layouts": "^1.4.1",
     "metalsmith-markdown": "^0.2.1",
@@ -26,6 +28,7 @@
     "metalsmith-uncss": "^0.2.0",
     "prismjs": "^1.2.0",
     "slug": "^0.9.1",
+    "yargs": "^3.27.0",
     "yeticss": "^7.0.5"
   }
 }
