--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
   "description": "",
   "main": "index.js",
   "scripts": {
-    "build": "node index.js && node index.js --reload",
+    "build": "node index.js",
     "start": "npm run build && node bs.js",
     "stage": "npm run build && surge -p build -d benclinkinbeard.surge.sh",
     "deploy": "npm run build && cp CNAME build/CNAME && surge -p build"
@@ -17,7 +17,9 @@
     "browser-sync": "^2.9.11",
     "handlebars": "^4.0.3",
     "metalsmith": "^2.1.0",
+    "metalsmith-clean-css": "5.0.0",
     "metalsmith-collections": "^0.7.0",
+    "metalsmith-concat": "6.0.0",
     "metalsmith-if": "^0.1.1",
     "metalsmith-layouts": "^1.4.1",
     "metalsmith-markdown": "^0.2.1",
