--- a/package.json
+++ b/package.json
@@ -25,6 +25,7 @@
     "metalsmith-markdown": "^0.2.1",
     "metalsmith-permalinks": "^0.4.0",
     "metalsmith-prism": "^2.0.0",
+    "metalsmith-redirect": "^2.1.0",
     "metalsmith-static": "0.0.5",
     "metalsmith-stylus": "^1.0.0",
     "metalsmith-uncss": "^0.2.0",
