--- a/package.json
+++ b/package.json
@@ -33,5 +33,8 @@
     "slug": "^0.9.1",
     "yargs": "^3.27.0",
     "yeticss": "^7.0.5"
+  },
+  "devDependencies": {
+    "surge": "^0.19.0"
   }
 }
